# neural-haskell

./: Myslenie.cabal  README.adoc  tabelczak-compression.sh  tabelczak-gas.sh  tabelczak-kmeans.sh  tabelczak-kohonen.sh  trans-gas.sh  trans-kohonen.sh
src/: Animation.hs  Clustering.hs  Feedback.hs  IOUtils.hs  LinearUtils.hs  Main.hs  MainIAD1.hs  MainIAD2.hs  MainIAD3.hs  Neural.hs  Radial.hs  RandomInit.hs  Regression.hs
